SUMI ChangeLog 
$Id$
vi: noexpandtab:

2005-08-25 Jeff Connelly <jeffconnelly@users.sourceforge.net>
	* Fix abort, add GUI option to resume, and 'startfile' option
	
2005-08-22 Jeff Connelly <jeffconnelly@users.sourceforge.net>
	* sumigetw uses wxPython 2.6.1.0 and new-style symbol names, no more 2.4
	* Client configures MTU instead of MSS, make MSS not include header
	* Fix sumigetw crash after 30,000 characters were logged, add log files

2005-08-21 Jeff Connelly <jeffconnelly@users.sourceforge.net> - 0.8.12
	* New transport: modtor, uses The Onion Router (see http://tor.eff.org)
	* File data encryption fully works, enabled by default (crypt_req not)
	* Many minor bugfixes, removed modpipe, use shorter variable names ('u')

2005-08-11 Jeff Connelly <jeffconnelly@users.sourceforge.net>
	* Partially autoconfigure IP, MSS, src_allow, and interface if
	  no 'interface' in config.py or no 'src_allow' in sumiserv.cfg.

2005-08-10 Jeff Connelly <jeffconnelly@users.sourceforge.net>
	* General code cleanup (pychecker again)
	* NAK lost packets are compressed, ex: 1-5,8,10 instead of 1,2,3,..

2005-07-31 Jeff Connelly <jeffconnelly@users.sourceforge.net> - 0.8.11
	* Auth packet includes hash of nonce for client to verify
	* Completely redone crypto implementation from 0.8.10
	* Use SHA-1 for key derivation function as recommended
	* Changed MD5 to SHA-1 in auth packet (MD5 still used for rawproxd)
	* Added INTERLOCK_DELAY; a time-sensitive enhancement to the Interlock
	  Protocol in order to detect some MITM

2005-07-23 Jeff Connelly <jeffconnelly@users.sourceforge.net>
	* Request messages can now be encrypted, set "crypto" to "y"
	* EC-DH + interlock protocol for key exchange/request
	* AES-256 for symmetric encryption 
	* Protects against passive eavesdropping and active MITM (not hijack)
	* Works well, but incomplete--need to verify nonce, encrypt data

2005-07-14 Jeff Connelly <jeffconnelly@users.sourceforge.net>
	* Removed cryptography for now--needs to be redone.
