@@ -2,6 +2,11 @@ SUMI ChangeLog
 $Id$
 vi: noexpandtab:
 
+2005-08-29 Jeff Connelly <jeffconnelly@users.sourceforge.net>
+	* Add support for passing a .sumi filename to sumigetw
+	* New .sumi file format
+	* GUI "Resume" works on multiple transfers at once
+
 2005-08-25 Jeff Connelly <jeffconnelly@users.sourceforge.net>
 	* Fix abort, add GUI option to resume, and 'startfile' option
 	
